src/pages/Dashboard.module.css
.dashboardContent {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 67%;
    margin: 0 auto;
    gap: 20px;
    padding: 20px 0 20px 0;
    margin-bottom: 68px;
}

.startSessionButton {
    background-color: var(--pink);
    color: white;
    border: none;
    border-radius: 12px;
    height: 120px;
    width: 100%;
    font-size: 32px;
    font-family: var(--heading-text);
    letter-spacing: 0.05em;
    font-weight: bold;
    cursor: pointer;
}

.dashboardCards {
    display: flex;
    gap: 20px;
    width: 100%;
}

.monthlyHeatmap {
    width: 100%;
    height: 210px;
    background-color: var(--dark-purple);
    border-radius: 12px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 24px;
    font-family: var(--heading-text);
    font-weight: bold;
    letter-spacing: 0.05em;
    color: white;
    border: 1px solid var(--orange-cream-50);
}

.recentSessions {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 12px;
    font-size: 16px;
    font-family: var(--body-text);
    color: var(--orange-cream);
}

.sessionItem {
    border: 1px solid var(--orange-cream-50);
    font-size: 18px;
    padding: 12px;
    border-radius: 12px;
    font-family: var(--heading-text);
    letter-spacing: 0.05em;
}

.socials {
    display: flex;
    flex-direction: row;
    width: 100%;
    gap: 30px;
}

.weeklyLeaderboard {
    display: flex;
    flex-direction: column;
    border: 1px solid var(--orange-cream-50);
    border-radius: 12px;
    font-family: var(--body-text);
    color: var(--orange-cream);
    width: 50%;
    padding: 20px;
}

